--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <a href="https://www.linkedin.com/in/ramireserica/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/ericaramires" target="_blank"><i class="fab fa-github"></i></a>
         </div>
-        <p style="color: green;">&copy; 2025 - Powered by <a href="https://github.com/gypsyrobot" target="_blank" style="color: green;">Everton Ramires. The Old Brother.</a></p>
+        <p style="color: green;">&copy; 2025 - Powered by <a href="https://github.com/ericaramires" target="_blank" style="color: green;">Erica Ramires. </a></p>
             </div>
 </footer>
 </html>
