--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/ramireserica/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/ericaramires" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="/public/CV-pt-Erica-Ramires.pdf" target="_blank" id="cv-download">
+                    <a href="/CV-pt-Erica-Ramires.pdf" target="_blank" id="cv-download">
                         <i class="fas fa-file-alt"></i>
                         <span class="cv-text">CV</span>
                     </a>
