--- a/index.html
+++ b/index.html
@@ -112,19 +112,17 @@
         <h2>Projetos</h2>
         <div class="projects-grid">
             <div class="project-card">
-                <h3>Sistema de Gestão</h3>
+                <h3>Gestão de Finanças</h3>
                 <div class="project-tech">
                     <span>Python</span>
-                    <span>JavaScript</span>
-                    <span>HTML</span>
-                    <span>CSS</span>
+                    
                 </div>
                 <div class="project-preview">
-                    <img src="caminho/para/imagem1.jpg" alt="Preview do Sistema de Gestão">
+                    <img src="/images/preview/gestão_de_financas.png" alt="Preview de Gestão de Finanças">
                 </div>
             </div>
             <div class="project-card">
-                <h3>App de Análise de Dados</h3>
+                <h3>Em desenvolvimento</h3>
                 <div class="project-tech">
                     <span>Python</span>
                     <span>C++</span>
@@ -134,7 +132,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <h3>Game Engine</h3>
+                <h3>Em desenvolvimento</h3>
                 <div class="project-tech">
                     <span>C++</span>
                     <span>C</span>
