docs: change cv and subtitle

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <span id="typed-text" class="typed-text"></span>
                     </div>
                 </h1>
-                <p class="description">Combinando inovação no desenvolvimento de soluções e excelência em cibersegurança para criar um futuro digital mais seguro e resiliente.</p>
+                <p class="description">Fortalecendo a inovação digital: Unindo a agilidade do DevOps com a robustez da cibersegurança via automação para desenvolver soluções cloud seguras e escaláveis.</p>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/ramireserica/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/ericaramires" target="_blank"><i class="fab fa-github"></i></a>
