docs: change project

--- a/index.html
+++ b/index.html
@@ -118,17 +118,21 @@
                     
                 </div>
                 <div class="project-preview">
-                    <img src="/images/preview/gestão_de_financas.png" alt="Preview de Gestão de Finanças">
+                    <img src="/images/preview/gestão_de_financas.png" alt="Preview">
                 </div>
             </div>
             <div class="project-card">
-                <h3>Em desenvolvimento</h3>
+                <h3>Plataforma de Serviços Auto-Hospedados</h3>
                 <div class="project-tech">
-                    <span>Python</span>
-                    <span>C++</span>
+                    <span>Docker</span>
+                    <span>Kubernetes</span>
+                    <span>Linux</span>
+                    <span>CloudFlare</span>
+                    <span>NodePort</span>
+                    <span>K9S</span>
                 </div>
                 <div class="project-preview">
-                    <img src="caminho/para/imagem2.jpg" alt="Preview do App de Análise">
+                    <img src="/images/preview/homelab.jpg" alt="Preview">
                 </div>
             </div>
             <div class="project-card">
