--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
             display: inline-block;
             vertical-align: middle;
         }
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            gap: 1rem;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
     </style>
 </head>
 <body>
@@ -105,6 +112,46 @@
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/docker/docker-original.svg" alt="Docker">
                 <h3>Docker</h3>
             </div>
+            <div class="skill-card">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/kubernetes/kubernetes-plain.svg" alt="Kubernetes">
+                <h3>Kubernetes</h3>
+            </div>
+            <div class="skill-card">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/ansible/ansible-original.svg" alt="Ansible">
+                <h3>Ansible</h3>
+            </div>
+            <div class="skill-card">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jenkins/jenkins-original.svg" alt="Jenkins">
+                <h3>Jenkins</h3>
+            </div>
+            <div class="skill-card">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" alt="Git">
+                <h3>Git</h3>
+            </div>
+            <div class="skill-card">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="GitHub">
+                <h3>GitHub</h3>
+            </div>
+            <div class="skill-card">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="GitHub Actions">
+                <h3>GitHub Actions</h3>
+            </div>
+            <div class="skill-card">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original.svg" alt="MongoDB">
+                <h3>MongoDB</h3>
+            </div>
+            <div class="skill-card">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tomcat/tomcat-original.svg" alt="Apache Tomcat">
+                <h3>Apache Tomcat</h3>
+            </div>
+            <div class="skill-card">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS">
+                <h3>AWS</h3>
+            </div>
+            <div class="skill-card">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/grafana/grafana-original.svg" alt="Grafana">
+                <h3>Grafana</h3>
+            </div>
         </div>
     </section>
 
@@ -136,13 +183,18 @@
                 </div>
             </div>
             <div class="project-card">
-                <h3>Em desenvolvimento</h3>
+                <h3>Overcured Game</h3>
                 <div class="project-tech">
-                    <span>C++</span>
-                    <span>C</span>
+                    <span>Docker</span>
+                    <span>AWS</span>
+                    <span>JS</span>
+                    <span>Node.js</span>
+                    <span>Vite</span>
+                    <span>Phaser 3</span>
+                    <span>Nakama</span>
                 </div>
                 <div class="project-preview">
-                    <img src="caminho/para/imagem3.jpg" alt="Preview da Game Engine">
+                    <img src="/images/preview/overcured_game.jpeg" alt="Preview Overcured Game">
                 </div>
             </div>
         </div>
